# bc-libs-java

./: .gitignore  .gitmodules  CLA.md  CODEOWNERS  CONTRIBUTING.md  INSTALLATION.md  README.md
CLA-signed/: CLA.jollyjoker992.D14E566967996C694B22E13A7E808AC50392AD3A.asc
base-jni/: jni-utils.c
bip39/: INSTALLATION.md
bip39/android/: CMakeLists.txt  settings.gradle
bip39/android/app/: build.gradle
bip39/android/app/src/androidTest/java/com/bc/bip39/: Bip39Test.kt
bip39/android/app/src/androidTest/java/com/bc/bip39/util/: TestUtils.kt
bip39/android/app/src/main/: AndroidManifest.xml
bip39/android/scripts/: build.sh
bip39/java/: build.gradle  settings.gradle
bip39/java/scripts/: build.sh  install_deps.sh
bip39/java/src/main/java/com/bc/bip39/: Bip39.java  Bip39Exception.java  Bip39Jni.java
bip39/java/src/main/jniLibs/: bip39-jni.c
bip39/java/src/test/java/com/bc/bip39/: Bip39Test.java
bip39/java/src/test/java/com/bc/bip39/util/: Callable.java  TestUtils.java
bytewords/: INSTALLATION.md
bytewords/android/: CMakeLists.txt  settings.gradle
bytewords/android/app/: build.gradle
bytewords/android/app/src/androidTest/java/com/bc/bytewords/: BytewordsTest.kt
bytewords/android/app/src/androidTest/java/com/bc/bytewords/util/: TestUtils.kt
bytewords/android/app/src/main/: AndroidManifest.xml
bytewords/android/scripts/: helper.sh
bytewords/java/: build.gradle  settings.gradle
bytewords/java/scripts/: build.sh
bytewords/java/src/main/java/com/bc/bytewords/: Bytewords.java  BytewordsException.java  BytewordsJni.java  BytewordsStyle.java
bytewords/java/src/main/jniLibs/: bytewords-jni.c
bytewords/java/src/test/java/com/bc/bytewords/: BytewordsTest.java
bytewords/java/src/test/java/com/bc/bytewords/util/: Callable.java  TestUtils.java
crypto-base/: INSTALLATION.md
crypto-base/android/: CMakeLists.txt  build.gradle  settings.gradle
crypto-base/android/app/: build.gradle
crypto-base/android/app/src/androidTest/java/com/bc/cryptobase/: CryptoBaseTest.kt  TestUtils.kt
crypto-base/android/app/src/main/: AndroidManifest.xml
crypto-base/android/scripts/: build.sh
crypto-base/java/: build.gradle  settings.gradle
crypto-base/java/scripts/: build.sh  cleanup.sh  helper.sh  install_deps.sh
crypto-base/java/src/main/java/com/bc/cryptobase/: CryptoBase.java  CryptoBaseException.java  CryptoBaseJni.java
crypto-base/java/src/main/jniLibs/: crypto-base-jni.c
crypto-base/java/src/test/java/com/bc/cryptobase/: CryptoBaseTest.java  TestUtils.java
images/logos/: README.md
shamir/: INSTALLATION.md
shamir/android/: CMakeLists.txt  settings.gradle
shamir/android/app/: build.gradle
shamir/android/app/src/androidTest/java/com/bc/shamir/: ShamirTest.kt  TestUtils.kt
shamir/android/app/src/main/: AndroidManifest.xml
shamir/android/scripts/: build.sh
shamir/java/: build.gradle  settings.gradle
shamir/java/scripts/: build.sh  helper.sh  install_deps.sh
shamir/java/src/main/java/com/bc/shamir/: RandomFunc.java  Shamir.java  ShamirException.java  ShamirJni.java  ShamirShard.java  ShamirShare.java
shamir/java/src/main/jniLibs/: shamir-jni.c
shamir/java/src/test/java/com/bc/shamir/: ShamirTest.java  TestUtils.java
shamir/java/src/test/java/com/bc/shamir/util/: Callable.java  TestUtils.java
sskr/: INSTALLATION.md
sskr/android/: CMakeLists.txt  settings.gradle
sskr/android/app/: build.gradle
sskr/android/app/src/androidTest/java/com/bc/sskr/: SSKRTest.kt  TestUtils.kt
sskr/android/app/src/main/: AndroidManifest.xml
sskr/android/gradle/wrapper/: gradle-wrapper.properties
sskr/android/scripts/: build.sh  install_deps.sh
sskr/java/: build.gradle  settings.gradle
sskr/java/scripts/: build.sh  install_deps.sh
sskr/java/src/main/java/com/bc/sskr/: RandomFunc.java  SSKR.java  SSKRException.java  SSKRGroupDescriptor.java  SSKRJni.java  SSKRShard.java  SSKRShare.java
sskr/java/src/main/jniLibs/: sskr-jni.c
sskr/java/src/test/java/com/bc/sskr/: SSKRTest.java  TestUtils.java
sskr/java/src/test/java/com/bc/sskr/util/: Callable.java  TestUtils.java
